do not float blog post images on narrow screens to avoid narrow text columns

--- a/blogs/themes/mysociety/sass/modules/_article.scss
+++ b/blogs/themes/mysociety/sass/modules/_article.scss
@@ -50,7 +50,9 @@
     }
     
     img{
-        float:right;
+        @media ( min-width: 50em ) {
+            float:right;
+        }
         padding: $gutter/2;
         margin-left: $gutter;
         background-color: #fff;
